# cgraphs

./: #lock_order.lyx#  #separation_logic.lyx#  .gitignore  LICENSE  Makefile  README.md  _CoqProject  cgraphs.opam  jafar_bart_deadlock_freedom.lyx  lambdabar.md  lock_order.lyx~  mkmpgv.sh  plan.lyx  plan.lyx~  readme.md  separation_logic.lyx  separation_logic.lyx~
cgraphsartifact/: README.md  _CoqProject
paper/: main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  pftools.sty
paper/actris-journal/: abstract.tex  acknowledgments.tex  comment.cut  coq.tex  future_work.tex  introduction.tex  lmcs.cls  locallabel.sty  lstcoq.tex  main.bbl  main.bib  main.blg  main.dvi  main.out  main.tex  makefile  map_reduce.tex  model.tex  preamble.tex  related_work.tex  sharing.tex  subprotocols.tex  tour.tex
talk/: talk.fdb_latexmk  talk.fls  talk.tex  talk.vrb
theories/: README.md  arjen.v  authlogic.md  cgraph.v  church.v  classic.v  deadlockstatements.v  edoardo.v  genericinv.v  heapprop.v  heapprop2.v  heapprop3.v  hlogic.v  hprop.v  htypesystem.v  ideas.v  invariant.v  invariant2.v  invtools.v  langdef.v  langlemmas.v  lem.v  lpo.v  lpo3.v  map_to_multiset.v  mapexcl.v  mapsolver.v  mtrees.v  multiset.v  paperplan.txt  pigeon.v  preservation.v  preservation_typesystem.v  progress.v  rtypesystem.v  scratch.v  seplogic.v  sessiontypes.v  sessiontypes2.v  spinlock.v  (+14 more)
theories/adhoc/: mapkeys.v  permutation.v
theories/bi/: weakestpre.v
theories/cgraphs/: bi.v  cgraph.v  genericinv.v  map_to_multiset.v  mapexcl.v  multiset.v  seplogic.v  uforests.v  upred.v  util.v
(+155 files in other folders)
